@@ -7,35 +7,59 @@ import java.util.*;
 import java.time.LocalDateTime;
 import java.util.*;
 
+import faang.school.godbless.House.Food;
+import faang.school.godbless.House.Room;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.TimeUnit;
+
 public class Application {
+    private List<Room> rooms;
+    private List<Food> collectedFood;
+
+    public Application(List<Room>rooms) {
+        this.rooms = rooms;
+        this.collectedFood = new ArrayList<>();
+    }
+
+    public synchronized void collectFood() {
+        if (rooms.size() >= 2) {
+            Room room1 = rooms.remove(0);
+            Room room2 = rooms.remove(0);
+
+            collectedFood.addAll(room1.collectFood());
+            collectedFood.addAll(room2.collectFood());
+        }
+    }
+
+    public boolean isFoodCollected() {
+        return rooms.isEmpty();
+    }
+
     public static void main(String[] args) {
-        List<UserProfile> users = Arrays.asList(
-                new UserProfile(1, "MALE", 20, "Москва", Arrays.asList("Сноубординг", "Фантастика", "Видеоигры")),
-                new UserProfile(2, "FEMALE", 25, "Москва", Arrays.asList("Кулинария", "Фантастика", "Туризм"))
-        );
+        List<Room> rooms = new ArrayList<>();
+        rooms.add(new Room("Кухня", List.of(new Food("Яблоко"), new Food("Банан"))));
+        rooms.add(new Room("Гостиная", List.of(new Food("Печенье"), new Food("Шоколад"))));
+        rooms.add(new Room("Спальня", List.of(new Food("Чипсы"), new Food("Вода"))));
+        rooms.add(new Room("Подвал", List.of(new Food("Сыр"), new Food("Колбаса"))));
+        rooms.add(new Room("Чердак", List.of(new Food("Орехи"), new Food("Мед"))));
+        rooms.add(new Room("Гараж", List.of(new Food("Сухофрукты"), new Food("Сок"))));
 
-        List<Product> products = Arrays.asList(
-                new Product(123, "Ботинки для сноуборда", "Спортивные товары", 5000, Arrays.asList("Спорт", "Сноубординг", "Зимний спорт")),
-                new Product(124, "Книга фантастики", "Книги", 700, Arrays.asList("Фантастика", "Литература"))
-        );
+        Application house = new Application(rooms);
 
-        List<ProductOrder> orders = Arrays.asList(
-                new ProductOrder(1, 123, LocalDateTime.of(2022, 11, 5, 18, 48, 24)),
-                new ProductOrder(2, 124, LocalDateTime.of(2022, 11, 6, 10, 15, 00))
-        );
+        ScheduledExecutorService executor = Executors.newScheduledThreadPool(5);
 
-        RecommendationService recommendationService = new RecommendationService(users, products, orders);
-
-        System.out.println("Рекомендации по интересам:");
-        List<Product> recommendedProducts = recommendationService.recommendProductsByInterests(1);
-        recommendedProducts.forEach(product -> System.out.println(product.getName()));
-
-        System.out.println("Популярные товары среди похожих пользователей:");
-        List<Product> topPurchasedProducts = recommendationService.recommendTopPurchasedProducts(1);
-        topPurchasedProducts.forEach(product -> System.out.println(product.getName()));
-
-        System.out.println("Категория для скидки:");
-        String discountCategory = recommendationService.recommendCategoryForDiscount(1);
-        System.out.println(discountCategory);
+        for (int i = 0; i < 5; i++) {
+            executor.schedule(() -> {
+                house.collectFood();
+                if (house.isFoodCollected()) {
+                    System.out.println("All food in house!");
+                    executor.shutdown();
+                }
+            }, i * 30, TimeUnit.SECONDS);
+        }
     }
 }
